# insurance_prediction

./: .dockerignore  .gitignore  Dockerfile  Exploratory_analysis.html  README.md  main.html  pyproject.toml
integration_tests/: __init__.py  test_api_cloud.py
notebooks/: Exploratory_analysis.ipynb  main.ipynb  split_data.py
notebooks/data/: test_travel_insurance.csv  train_travel_insurance.csv  val_travel_insurance.csv
notebooks/models/: full_pipeline.pkl
notebooks/utils/: evaluations.py  plots.py
tests/: __init__.py  test_api.py  test_api_locally.py
uv_app/: __init__.py  api.py  schemas.py  settings.py
