[project]
name = "insurance_prediction"
version = "0.1.0"
description = ""
requires-python = "~=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.27.0",
    "pandas",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.2",
    "scikit-learn>=1.6.1",
    "xgboost>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["uv_app/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.poe.tasks]
test = "uv run pytest tests"
lint = "uv run ruff check uv_app tests *.py --fix"
format = "uv run ruff format uv_app tests *.py"
isort = "uv run ruff check uv_app tests *.py --select I --fix-only"
x = ["lint", "format", "isort"]

[dependency-groups]
dev = [
    "poethepoet>=0.32.2",
    "pre-commit>=4.2.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.7",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "pygam>=0.8.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "catboost>=1.2.8",
    "pytest>=8.0.0",
    "gcloud>=0.18.3",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN002",  # Missing type annotation for args
  "ANN003",  # Missing type annotation for kwarg
  "ANN401",  # Dynamic type annotations
  "COM812",  # Missing trailing comma
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class (for obvious classes)
  "D103",    # Missing docstring in public function (for obvious functions)
  "D104",    # Missing docstring in public package
  "FBT001",  # Bool use in arg
  "FBT002",  # Default bool use in arg
  "G004",    # Logging with f-strings
  "INP001",  # Missing __init__.py in package
  "PLR0913", # Too many arguments (ignored if default args are used)
  "S101",    # Use of assert
  "SLF001",  # Access to a private member (for tests only)
  "T201",    # `print` found. As this is project include notebooks I ignore this

]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"
